--- a/resume.tex
+++ b/resume.tex
@@ -147,6 +147,19 @@ C \textbullet{} CSS \textbullet{} Java \textbullet{} HTML \textbullet{} \LaTeX\ 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
+
+\runsubsection{Scale.com}
+\descript{| Forward deployed engineer }
+\location{August 2020 - Present | San Francisco, CA}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item I joined Scale to work at a hypergrowth startup on a new product they launched called Scale Nucleus
+\item We were a 4 man team, with me leading the go-to-market strategy, and writing code to ensure we found the first few customers
+\item I would occassional write features, but the most of my day was spent performing integrations for customers, or mapping their problems to software.
+\item I grew the product from 3 to 40 customers in the span of two months, using a lot of scruffy startup playbook rules, in search of product market fit.
+\end{tightemize}
+\sectionsep
+
 \runsubsection{Astrum.ai}
 \descript{| Founder }
 \location{Nov 2019 - July 2020 | Toronto, Ontario}
