--- a/resume.tex
+++ b/resume.tex
@@ -94,10 +94,9 @@ Sub focus in deep learning
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links} 
-Facebook:// \href{https://www.facebook.com/IamGingerTrash}{\bf Srikanth Srinivas} \\
+Twitter:// \href{https://www.twitter.com/IamGingerTrash}{\bf Srikanth Srinivas} \\
 Github:// \href{https://github.com/srikanthsrnvs}{\bf srikanthsrnvs} \\
 LinkedIn://  \href{https://www.linkedin.com/in/srikanthsrnvs/}{\bf srikanthsrnvs} \\
-Blog://  \href{https://medium.com/@recurseai}{\bf recurseai} \\
 Personal website://  \href{https://srikanthsrnvs.github.io/website/}{\bf Link} \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -106,9 +105,9 @@ Personal website://  \href{https://srikanthsrnvs.github.io/website/}{\bf Link} \
 
 \section{Skills}
 \subsection{Programming}
-\location{Over 7000 lines:}
+\location{Over 50000 lines:}
 Javascript \textbullet{}  Swift \textbullet{} Python \\
-\location{Over 1000 lines:}
+\location{Over 10000 lines:}
 C \textbullet{} CSS \textbullet{} Java \textbullet{} HTML \textbullet{} \LaTeX\ \\
 \location{Technologies:}
 \textbullet{} React.js \\
@@ -148,14 +147,24 @@ C \textbullet{} CSS \textbullet{} Java \textbullet{} HTML \textbullet{} \LaTeX\ 
 
 \section{Experience}
 
-\runsubsection{Scale.com}
-\descript{| Forward deployed engineer }
-\location{August 2020 - Present | San Francisco, CA}
+\runsubsection{Swype}
+\descript{| Founder & CEO }
+\location{May 2021 - Present | Miami, FL}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item I joined Scale to work at a hypergrowth startup on a new product they launched called Scale Nucleus
+\item A decentralized banking stack. We're building the first decentralized, trustless version of a Chase checking account
+\item We raised a small pre-seed of 300,000 from \href{www.villageglobal.vc}{\textbf{VillageGlobal}}, \href{305Ventures.com}{\textbf{305ventures}} and Chief of staff @ scale.com
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Scale.com}
+\descript{| Forward deployed engineer }
+\location{August 2020 - May 2021 | San Francisco, CA}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item I joined Scale to work at a hypergrowth startup on a new product called Scale Nucleus
 \item We were a 4 man team, with me leading the go-to-market strategy, and writing code to ensure we found the first few customers
-\item I would occassional write features, but the most of my day was spent performing integrations for customers, or mapping their problems to software.
+\item I would occasional write features, but the most of my day was spent performing integrations for customers, or mapping their problems to software.
 \item I grew the product from 3 to 40 customers in the span of two months, using a lot of scruffy startup playbook rules, in search of product market fit.
 \end{tightemize}
 \sectionsep
