--- a/resume.tex
+++ b/resume.tex
@@ -153,7 +153,7 @@ C \textbullet{} CSS \textbullet{} Java \textbullet{} HTML \textbullet{} \LaTeX\ 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
 \item A decentralized banking stack. We're building the first decentralized, trustless version of a Chase checking account
-\item We raised a small pre-seed of 300,000 from \href{www.villageglobal.vc}{\textbf{VillageGlobal}}, \href{305Ventures.com}{\textbf{305ventures}} and Chief of staff @ scale.com
+\item Raised over 3m and scaled the company to process ~2m a month in transactions, currently 6 employees.
 \end{tightemize}
 \sectionsep
 
